--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,8 @@
     <string name="main.independiente">Independiente</string>
     <string name="main.personaeventual">Persona Eventual</string>
     <string name="main.trabajadorfamiliar">Trabajador Familiar sin Remuneracion</string>
-    <string name="main.h">H</string>
-    <string name="main.m">M</string>
+    <string name="main.h">Nro de Hombre</string>
+    <string name="main.m">Nro de Mujeres</string>
     <string name="main.cero">0</string>
 
     <string name="main.titlehotel">Datos de Ingreso</string>
@@ -35,4 +35,13 @@
 
 
     <string name="panel.title.admin">Administracion</string>
+    
+    <string-array name="department">
+        <item>Cochabamba</item>
+        <item>Pando</item>
+        <item>Santa Cruz</item>
+        <item>Tarija</item>
+        <item>Beni</item>
+    </string-array>
+
 </resources>
